--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
   Asia  
+
+  <style>
+    body{
+
+      background-color: rgba(0, 0, 0, 0.87);
+      background-color: rgb(47, 79, 79);
+      background-color: #2f4f4f;
+      background-color: darkslategray; /* Standard colors */
+      background: linear-gradient(rgb(122,74, 14) rgb(245, 62, 113), rgb(162, 27, 27));
+    }
+  </style>
+
+
+<img src="https://www.remsey.nl/assets/images/japansmall.jpg" alt="">
 </body>
 </html>
